--- a/index.html
+++ b/index.html
@@ -266,6 +266,22 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
+              <a href="https://www.youtube.com/watch?v=FxZUVilSX-0&t=612s"><img src="images/blog-post-8.jpg" class="img-responsive" alt="img"></a>
+
+              <div class="journal-txt">
+
+                <h4><a href="https://www.youtube.com/watch?v=FxZUVilSX-0&t=612s">Comment faire du SAM</a></h4>
+                <p class="separator">A live-coding session presented to the Software Crafters Paris Group on April 24th 2019
+                </p>
+
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="journal-info">
+
               <a href="https://www.youtube.com/watch?v=1zZJa0V53Qc"><img src="images/blog-post-7.jpg" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
